crates/codegen/language/tests/src/fail/parsing/empty_string/test.stderr
error: Expected a non-empty string.
  --> src/fail/parsing/empty_string/test.rs:17:63
   |
17 |                 definitions = [TokenDefinition(scanner = Atom(""))]
   |                                                               ^^
